Migrate hello-rust.show links to https://corrode.dev/hello-rust/

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -19,8 +19,8 @@
       </p>
       <p>
         Prior ventures include
-        <a href="https://hello-rust.show/">Hello, Rust!</a>, a YouTube channel
-        about the Rust programming language and
+        <a href="https://corrode.dev/hello-rust//">Hello, Rust!</a>, a YouTube
+        channel about the Rust programming language and
         <a href="https://codeprints.dev">codeprints</a>, a shop for getting art
         prints of your GitHub timeline.
       </p>
