--- a/static/css/main.css
+++ b/static/css/main.css
@@ -55,9 +55,6 @@ header {
   font-size: 0.8em;
   text-align: center;
   padding-top: 25px;
-  /* position: sticky; */
-  top: 50px;
-  height: 100vh;
 }
 
 .logo {
@@ -432,13 +429,6 @@ summary {
 
 /* Styles for small screens */
 @media (max-width: 920px) {
-  header {
-    position: static;
-    width: auto;
-    height: auto;
-    margin: 0 auto;
-  }
-
   .navwrapper {
     margin: 0 auto;
     display: flex;
@@ -446,10 +436,12 @@ summary {
 
   .container {
     margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
   }
 
   main {
-    padding: 0px 10px;
+    padding: 0px 20px;
   }
 
   .searchicon {
