--- a/templates/page.html
+++ b/templates/page.html
@@ -1,62 +1,52 @@
-{% extends "index.html" %}
-
-{%- block header %}
+{% extends "index.html" %} {%- block header %}
 <title>{{ page.title }} | Matthias Endler</title>
-<link rel="canonical" href="{{ page.permalink | safe }}">
+<link rel="canonical" href="{{ page.permalink | safe }}" />
 {%- if page.extra.css %}
-    <link href="./article.css" rel="stylesheet"/>
+<link href="./article.css" rel="stylesheet" />
 {%- endif %}
-<link rel="stylesheet" type="text/css" href="/syntax-theme-dark-custom.css" media="(prefers-color-scheme: dark)" />
-<link rel="stylesheet" type="text/css" href="/syntax-theme-light-custom.css" media="(prefers-color-scheme: light)" />
-{%- include "snippets/social.html" %}{%- endblock header -%}
-
-{%- block content %}
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/syntax-theme-dark-custom.css"
+  media="(prefers-color-scheme: dark)"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/syntax-theme-light-custom.css"
+  media="(prefers-color-scheme: light)"
+/>
+{%- include "snippets/social.html" %}{%- endblock header -%} {%- block content
+%}
 
 <article>
-  <p class="post-meta">Published on
-      {{ macros::nicedate(date=page.date) }}
-      {%- if page.updated %}
-          &middot; Updated on
-          {{ macros::nicedate(date=page.updated) }}
-      {%- endif %}
+  <p class="post-meta">
+    Published on {{ macros::nicedate(date=page.date) }} {%- if page.updated %}
+    &middot; Updated on {{ macros::nicedate(date=page.updated) }} {%- endif %}
   </p>
 
   <h1>{{ page.title }}</h1>
   {%if page.extra.subtitle %}
-    <h3>&mdash; {{ page.extra.subtitle }}</h3>
-  {% endif %}
-
-  {% if page.taxonomies.tags %}
-    <div class="tags">
-      <i>Tagged with</i>
-      {% for tag in page.taxonomies.tags %}
-        <a class="tag" href="/tags/{{tag}}">{{tag}}</a>
-      {%endfor%}
-    </div>
-  {% endif %}
-
-  {{ page.content | safe }}
+  <h3>&mdash; {{ page.extra.subtitle }}</h3>
+  {% endif %} {% if page.taxonomies.tags %}
+  <div class="tags">
+    <i>Tagged with</i>
+    {% for tag in page.taxonomies.tags %}
+    <a class="tag" href="/tags/{{tag}}">{{tag}}</a>
+    {%endfor%}
+  </div>
+  {% endif %} {{ page.content | safe }}
 
   <ul class="post-links">
-      {% if page.extra.comments %}
-          <li>
-              {{ macros::comments(comments=page.extra.comments) }}
-          </li>
-      {% endif %}
-      {% if page.extra.translations %}
-          <li>
-              {{ macros::translations(translations=page.extra.translations) }}
-          </li>
-      {% endif %}
+    {% if page.extra.comments %}
+    <li>{{ macros::comments(comments=page.extra.comments) }}</li>
+    {% endif %} {% if page.extra.translations %}
+    <li>{{ macros::translations(translations=page.extra.translations) }}</li>
+    {% endif %}
   </ul>
-  {% include "snippets/newsletter.html" %}
-  {% if page.extra.credits %}
-      {{ macros::credits(credits=page.extra.credits) }}
+  {% if page.extra.credits %} {{ macros::credits(credits=page.extra.credits) }}
   {% endif %}
 </article>
 
-{% endblock content %}
-
-{% block teaser %}
-  {% include "snippets/teaser.html" %}
+{% endblock content %} {% block teaser %} {% include "snippets/teaser.html" %}
 {% endblock teaser %}
