--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,48 +1,15 @@
 <footer>
   <div class="body">
     <div>
-      <h2><a href="/about">About me</a></h2>
       <p>
-        I'm <a href="/about">Matthias Endler</a>, an open-source maintainer and
-        Rust consultant at <a href="https://corrode.dev">corrode</a>, helping
-        clients make their Rust code faster and more idiomatic.
-      </p>
-      <p>
-        I am the co-founder of
-        <a href="https://openpodcast.app">Open Podcast</a>, a pro-tool for
-        podcast analytics (like Google Analytics, but for podcasts).
-      </p>
-      <p>
-        With a passion for linters and static code analysis, I also maintain
-        <a href="https://analysis-tools.dev/">analysis-tools.dev</a>, an open
-        platform with 600+ tools listed.
-      </p>
-      <p>
-        Prior ventures include
-        <a href="https://corrode.dev/hello-rust//">Hello, Rust!</a>, a YouTube
-        channel about the Rust programming language and
-        <a href="https://codeprints.dev">codeprints</a>, a shop for getting art
-        prints of your GitHub timeline.
+        Thanks for reading! I mostly write about Rust and my (open-source)
+        projects. If you would like to receive future posts automatically, you
+        can subscribe via <a href="/rss.xml">RSS</a>.
       </p>
       <p>
         For more info, check out my
         <a href="/about">about page</a> or the
         <a href="/archive">blog archive</a>.
-      </p>
-    </div>
-    <div>
-      <h2><a href="https://github.com/sponsors/mre/">Support</a></h2>
-      <p>
-        Some links on this blog are <i>affiliate links</i> and I earn a small
-        comission if you end up buying something on the partner site (at no
-        extra cost for you), which I use to cover maintenance costs. I only link
-        to books and resources that I'd personally recommend to friends.
-      </p>
-      <p>
-        Maintaining this blog and my projects is a lot of work and I'd love to
-        spend a bigger part of my life writing and maintaining open source
-        projects. If you like to support me in this goal, the best way would be
-        to <a href="https://github.com/sponsors/mre/">become a sponsor</a> ❤️.
       </p>
     </div>
   </div>
