--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -2,9 +2,9 @@
   <div class="body">
     <div>
       <p>
-        Thanks for reading! I mostly write about Rust and my (open-source)
-        projects. If you would like to receive future posts automatically, you
-        can subscribe via <a href="/rss.xml">RSS</a>.
+        I mostly write about Rust and my (open-source) projects. If you would
+        like to receive future posts automatically, you can subscribe via
+        <a href="/rss.xml">RSS</a>.
       </p>
       <p>
         For more info, check out my
