--- a/templates/snippets/codecrafters.html
+++ b/templates/snippets/codecrafters.html
@@ -1,15 +1,13 @@
 <div class="info">
   <p>
-    Thanks for reading! In case you enjoyed this, you might want to be
-    interested in becoming a better programmer. CodeCrafters is the platform I
-    genuinely recommend to friends for this. You can
-    <a href="https://app.codecrafters.io/join?via=mre"
-      >try CodeCrafters for free here</a
-    >
-    and get 40% off if you upgrade to a paid plan later.
+    Thanks for reading! If you're looking to level up your programming skills,
+    check out
+    <a href="https://app.codecrafters.io/join?via=mre">CodeCrafters</a> - it's
+    the platform I genuinely recommend to friends. Try it free and get 40% off
+    paid plans.
   </p>
   <p>
-    Full disclosure: I receive a commission for new subscriptions, but I would
-    recommend CodeCrafters even if I didn’t.
+    Full disclosure: I earn a commission on subscriptions, so you'll be
+    supporting my work while improving your coding skills.
   </p>
 </div>
