--- a/templates/page.html
+++ b/templates/page.html
@@ -49,9 +49,18 @@
     {% include "snippets/codecrafters.html" %}
   {% endif %}
   
-  {% if page.extra.credits %} {{
-  macros::credits(credits=page.extra.credits) }} {% endif %}
+  {% if page.extra.credits %} 
+    Thanks to  
+    {% for credit in page.extra.credits | sort(attribute="name") %}
+      <a href="{{ credit.url }}">{{ credit.name }}</a>
+      {%- if not loop.last %},{% endif %}
+    {% endfor %}
+    for reviewing drafts of this article.
+  {% endif %}
 </article>
 
-{% endblock content %} {% block teaser %} {% include "snippets/teaser.html" %}
+{% endblock content %}
+
+{% block teaser %}
+{% include "snippets/teaser.html" %}
 {% endblock teaser %}
