Remove unused teaser

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,6 @@
         {% endblock content %}
       </main>
     </div>
-    {% block teaser %} {% endblock teaser %} {% include "snippets/footer.html"
-    %}
+    {% include "snippets/footer.html" %}
   </body>
 </html>
