--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,5 +1,6 @@
 <footer>
   <div class="body">
+    {% include "snippets/social.html" %}
     <div>
       <p>
         I mostly write about Rust and my (open-source) projects. If you would
