--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,9 +13,6 @@
 
   --anim-duration: 150ms;
   --border-radius: 4px;
-  --serif: "Book Antiqua", "Palatino Linotype", Palatino, "EB Garamond", serif;
-  --sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji;
   --monospace: operator mono, sfmono-regular, Consolas, liberation mono, Menlo,
     Courier, monospace;
 }
@@ -37,8 +34,9 @@ h2 {
 /* Style */
 
 body {
-  font-family: var(--serif);
-  font-size: 1.2em;
+  /* font-family: var(--serif); */
+  font-family: "Bitter", serif;
+  font-size: 1.15em;
   line-height: 1.58;
   color: var(--grey-500);
   border-top: 0.5em solid var(--pink-400);
@@ -75,12 +73,6 @@ header {
   left: 0;
 }
 
-.bio {
-  width: 190px;
-  margin: auto;
-  padding: 16px;
-}
-
 main {
   margin-top: 20px;
   margin-bottom: 50px;
@@ -109,6 +101,15 @@ h2,
 h3,
 h4,
 h5,
+h6 {
+  font-family: "Happy", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
 h6,
 th,
 td,
@@ -122,7 +123,7 @@ h1 {
 }
 
 h2 {
-  font-size: 1.2em;
+  font-size: 1.5em;
 }
 
 main h2 {
@@ -134,13 +135,13 @@ h3 {
   font-style: italic;
 }
 
-header nav ul {
+.social-icons ul {
   display: inline-block;
   padding-left: 0px;
   margin-top: 0;
 }
 
-header nav li {
+.social-icons li {
   list-style: none;
   display: inline;
 }
