--- a/templates/page.html
+++ b/templates/page.html
@@ -16,26 +16,52 @@
   href="/syntax-theme-light-custom.css"
   media="(prefers-color-scheme: light)"
 />
-{%- include "snippets/social.html" %}{%- endblock header -%} {%- block content
-%}
+{%- if page.extra.excerpt %}
+  {%- set social_description = page.extra.excerpt | safe %}
+{%- elif page.summary %}
+  {%- set social_description = page.summary | safe %}
+{%- else %}
+  {%- set social_description = page.content | truncate(length=50) | safe %}
+{%- endif %}
+
+{%- if page.extra.social_img %}
+  {% set relpath = current_path ~ page.extra.social_img %}
+  {%- set social_img = get_url(path=relpath) %}
+{% else %}
+  {%- set social_img = "https://endler.dev/default.png" %}
+{%- endif %}
+
+<meta property="og:title" content="{{ page.title }} | Matthias Endler" />
+<meta property="og:type" content="website" />
+<meta property="og:description" content="{{ social_description | safe | striptags }}" />
+<meta property="og:url" content="https://endler.dev{{ page.path | safe }}" />
+<meta property="og:image" content="{{ social_img | safe }}" />
+
+<meta name="twitter:title" content="{{ page.title | safe }}">
+<meta name="twitter:description" content="{{ social_description | safe | striptags }}">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@matthiasendler">
+<meta name="twitter:creator" content="@matthiasendler">
+<meta name="twitter:image" content="{{ social_img | safe }}">
+{%- endblock header -%}
+
+{%- block content %}
 
 <article>
+
+  <h1>{{ page.title }}</h1>
+
+  {%if page.extra.subtitle %}
+  <h3>&mdash; {{ page.extra.subtitle }}</h3>
+  {% endif %}
+  
+
   <p class="post-meta">
     Published on {{ macros::nicedate(date=page.date) }} {%- if page.updated %}
     &middot; Updated on {{ macros::nicedate(date=page.updated) }} {%- endif %}
   </p>
-
-  <h1>{{ page.title }}</h1>
-  {%if page.extra.subtitle %}
-  <h3>&mdash; {{ page.extra.subtitle }}</h3>
-  {% endif %} {% if page.taxonomies.tags %}
-  <div class="tags">
-    <i>Tagged with</i>
-    {% for tag in page.taxonomies.tags %}
-    <a class="tag" href="/tags/{{tag}}">{{tag}}</a>
-    {%endfor%}
-  </div>
-  {% endif %} {{ page.content | safe }}
+  
+  {{ page.content | safe }}
 
   <ul class="post-links">
     {% if page.extra.comments %}
