--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,16 +5,13 @@
   --grey-200: #fafafa;
 
   --blue-800: #141f2b;
-  --blue-500: #234;
   --pink-400: #e83e8c;
   --grey-300: #b9b9b9;
   --grey-400: #555;
   --grey-500: #111;
 
   --anim-duration: 150ms;
-  --border-radius: 4px;
-  --monospace: operator mono, sfmono-regular, Consolas, liberation mono, Menlo,
-    Courier, monospace;
+  --border-radius: 0px;
 }
 
 /* Tiny reset */
@@ -34,16 +31,25 @@ h2 {
 /* Style */
 
 body {
-  /* font-family: var(--serif); */
   font-family: "Bitter", serif;
   font-size: 1.15em;
   line-height: 1.58;
   color: var(--grey-500);
-  border-top: 0.5em solid var(--pink-400);
+}
+
+.container {
+  max-width: 650px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+header {
+  display: flex;
+  gap: 20px;
 }
 
 .logo {
-  width: 110px;
+  width: 80px;
   margin: auto;
 }
 
@@ -58,12 +64,6 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-}
-
-main {
-  margin-top: 20px;
-  margin-bottom: 50px;
-  max-width: 600px;
 }
 
 main article {
@@ -161,7 +161,6 @@ h3 {
   box-shadow: 0 1px 0 rgba(27, 31, 35, 0.04),
     inset 0 1px 0 hsla(0, 0%, 100%, 0.25);
   transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
-  font-family: var(--sans-serif);
   padding: 7px 16px;
   white-space: nowrap;
 }
@@ -187,11 +186,6 @@ h3 {
 
 .searchicon {
   display: none;
-}
-
-pre,
-code {
-  font-family: var(--monospace);
 }
 
 pre {
@@ -320,8 +314,8 @@ picture {
 }
 
 footer {
-  background: var(--blue-500);
-  color: var(--grey-300);
+  background: var(--blue-800);
+  opacity: 0.7;
 }
 
 footer {
@@ -515,14 +509,14 @@ summary {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background: var(--blue-500);
+    background: var(--blue-800);
     color: white;
     border-top-color: var(--pink-400);
   }
 
   .bio,
   .post-meta {
-    color: var(--grey-300);
+    opacity: 0.7;
   }
 
   a {
