--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,14 @@
     />
 
     <style>
+
+      @font-face {
+        font-family: "Happy-Headline";
+        src: url("/fonts/Happy-Headline.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+      }
+
       @font-face {
         font-family: "Happy";
         src: url("/fonts/Happy.ttf") format("truetype");
