--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
         <main>
           {% block content %}
           {% for page in paginator.pages %}
-            {% include "snippets/article.html" %}
+            {% include "snippets/article_preview.html" %}
           {% endfor %}
 
         <div style="display: flex; justify-content: space-between">
