--- a/templates/tags/single.html
+++ b/templates/tags/single.html
@@ -9,7 +9,7 @@
 
 <h1 class="tag-headline">{{ term.pages | length }} articles tagged with <span class="tag">{{ term.name }}</span></h1>
     {% for page in paginator.pages %}
-        {% include "snippets/article.html" %}
+        {% include "snippets/article_preview.html" %}
     {% endfor %}
     <div style="display: flex; justify-content: space-between">
         {% if paginator.previous %}
