--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
 
   <body>
     <div class="container">
-      <header>
+      <header class="logo-header">
         <a href="/" aria-label="Go back to homepage">
           <div class="logo">{{ logo | safe }}</div>
         </a>
