--- a/templates/page.html
+++ b/templates/page.html
@@ -1,4 +1,5 @@
-{% extends "index.html" %} {%- block header %}
+{% extends "index.html" %}
+{%- block header %}
 <title>{{ page.title }} | Matthias Endler</title>
 <link rel="canonical" href="{{ page.permalink | safe }}" />
 {%- if page.extra.css %}
@@ -48,23 +49,25 @@
 {%- block content %}
 
 <article>
-
-  <h1>{{ page.title }}</h1>
-
-  {%if page.extra.subtitle %}
-  <h3>&mdash; {{ page.extra.subtitle }}</h3>
-  {% endif %}
-  
-
-  <p class="post-meta">
-    {%- if page.updated %}
-      {{ macros::nicedate(date=page.updated) }}
-    {% else %}
-        {{ macros::nicedate(date=page.date) }} 
+  <header class="article-header">
+    <h1>{{ page.title }}</h1>
+    
+    {%if page.extra.subtitle %}
+    <h2 class="subtitle">&mdash; {{ page.extra.subtitle }}</h2>
     {% endif %}
-  </p>
+    
+    <div class="post-meta">
+      {%- if page.updated %}
+        {{ macros::nicedate(date=page.updated) }}
+      {% else %}
+        {{ macros::nicedate(date=page.date) }} 
+      {% endif %}
+    </div>
+  </header>
   
-  {{ page.content | safe }}
+  <div class="article-content">
+    {{ page.content | safe }}
+  </div>
 
   <ul class="post-links">
     {% if page.extra.comments %}
